# pyramid_chameleon

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  COPYRIGHT.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  RELEASING.txt  contributing.md  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-tests.yml
docs/: api.rst  conf.py  glossary.rst  index.rst  templates.rst
pyramid_chameleon/: TODO.txt  __init__.py  chameleon_text.py  chameleon_zpt.py  configure.zcml  interfaces.py  localization.py  precompile.py  renderer.py  text.py  views.py  zpt.py
pyramid_chameleon/templates/: main.pt
pyramid_chameleon/tests/: __init__.py  _compat.py  test_chameleon_text.py  test_chameleon_zpt.py  test_init.py  test_localization.py  test_precompile.py  test_renderers.py  test_text.py  test_zpt.py
pyramid_chameleon/tests/fixtures/: boolattrs.pt  boolattrsxml.pt  booleans_html5.pt  booleans_htmlfrag.pt  booleans_nodoctype.pt  booleans_xhtml.pt
