[easy_install]
zip_ok = false

[aliases]
dev = develop easy_install pyramid_chameleon[testing]
docs = develop easy_install pyramid_chameleon[docs]

[metadata]
license_file = LICENSE.txt
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst

[tool:pytest]
python_files = test_*.py
testpaths =
    pyramid_chameleon/tests
addopts = -W always
