[easy_install]
zip_ok = false

[aliases]
dev = develop easy_install pyramid_chameleon[testing]
docs = develop easy_install pyramid_chameleon[docs]

[metadata]
name = pyramid_chameleon
version = 0.4.dev0
description = Chameleon template system bindings for the Pyramid web framework
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst
keywords = pyramid chameleon templates templating html markup
classifiers=
  Development Status :: 6 - Mature
  Programming Language :: Python
  Framework :: Pylons
  Environment :: Web Environment
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Intended Audience :: Developers
  License :: Repoze Public License
  Topic :: Text Processing :: Markup :: XML
  Topic :: Text Processing :: Markup :: HTML
url = https://github.com/Pylons/pyramid_chameleon
author= reed@koansys.com, Pylons & Pyramid community
author_email = pylons-discuss@googlegroups.com
license = BSD-derived (http://www.repoze.org/LICENSE.txt)

[options]
python_requires = >=3.7.0
install_requires =
  pyramid
  Chameleon

[options.extras_require]
testing =
  pytest
  pytest-cov
  coverage

docs =
   Sphinx>=1.7.4
   docutils
   repoze.sphinx.autointerface
   pylons-sphinx-themes

[options.entry_points]
console_scripts = 
   pyramid-chameleon-precompile = pyramid_chameleon.precompile:precompile

[tool:pytest]
python_files = test_*.py
testpaths =
    pyramid_chameleon/tests
addopts = -W always
